--- a/connect4thingy/package.json
+++ b/connect4thingy/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "idk",
+  "name": "connect4thingy",
   "version": "1.0.0",
-  "description": "Signing In and Out Database thingy",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [
-    "dave"
-  ],
-  "author": "Sammy",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "nano": "^9.0.5",
     "nanoid": "^3.1.30",
     "nodemon": "^2.0.14"
   }
