--- a/connect4thingy/package.json
+++ b/connect4thingy/package.json
@@ -14,6 +14,8 @@
     "express-session": "^1.17.2",
     "nano": "^9.0.5",
     "nanoid": "^3.1.30",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "socket.io": "^4.3.1",
+    "socket.js": "^0.1.4"
   }
 }
