--- a/SignOfGod/package.json
+++ b/SignOfGod/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "nanoid": "^3.1.30",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "sqlite3": "^5.0.2"
   }
 }
