--- a/SignOfGod/package.json
+++ b/SignOfGod/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "nanoid": "^3.1.30",
-    "nodemon": "^2.0.14",
+    "nodemon": "^2.0.15",
+    "pug": "^3.0.2",
     "sqlite3": "^5.0.2"
   }
 }
